Apply prettier module

--- a/package.json
+++ b/package.json
@@ -6,5 +6,19 @@
   "license": "UNLICENSED",
   "engines": {
     "node": ">=20"
+  },
+  "scripts": {
+    "prepare": "husky",
+    "prettier:check": "prettier --check '{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml,feature}'",
+    "prettier:format": "prettier --write '{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml,feature}'"
+  },
+  "devDependencies": {
+    "@prettier/plugin-xml": "3.4.1",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.4",
+    "prettier": "3.2.5",
+    "prettier-plugin-gherkin": "2.2.1",
+    "prettier-plugin-java": "2.6.0",
+    "prettier-plugin-packagejson": "2.5.0"
   }
 }
