--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "description": "JHipster Sample Application",
   "license": "UNLICENSED",
-  "engines": {
-    "node": ">=20"
-  },
   "scripts": {
     "prepare": "husky",
-    "prettier:check": "prettier --check '{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml,feature}'",
-    "prettier:format": "prettier --write '{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml,feature}'"
+    "prettier:check": "prettier --check .",
+    "prettier:format": "prettier --write ."
   },
   "devDependencies": {
     "@prettier/plugin-xml": "3.4.1",
     "husky": "9.0.11",
-    "lint-staged": "15.2.4",
-    "prettier": "3.2.5",
+    "lint-staged": "15.2.5",
+    "prettier": "3.3.1",
     "prettier-plugin-gherkin": "2.2.1",
     "prettier-plugin-java": "2.6.0",
     "prettier-plugin-packagejson": "2.5.0"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
