--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,13 +30,12 @@ jobs:
       - name: 'Test: run tests'
         run: |
           chmod +x mvnw
-          ./mvnw clean verify
+          ./mvnw clean package
       - name: 'Test: generate sample app'
-        working-directory: ./tests-ci/
         run: |
-          ./start.sh 7471
-          ./generate.sh fullapp maven yaml
-          ./stop.sh
+          ./tests-ci/start.sh 7471
+          ./tests-ci/generate.sh fullapp maven yaml
+          ./tests-ci/stop.sh
       - name: 'Test: verify generated sample app'
         working-directory: /tmp/jhlite/fullapp/
         run: |
