--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jhipster-sample-application",
   "version": "0.0.0",
   "private": true,
-  "description": "JHipster Sample Application",
+  "description": "JHLite Extension Sample",
   "license": "UNLICENSED",
   "scripts": {
     "prepare": "husky",
