chore: changes baseName to 'jhliteExtensionSample' Fixes #5

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jhipster-sample-application",
+  "name": "jhlite-extension-sample",
   "version": "0.0.0",
   "private": true,
   "description": "JHLite Extension Sample",
