--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>tech.jhipster.lite.extension</groupId>
-  <artifactId>jhipster-sample-application</artifactId>
+  <artifactId>jhlite-extension-sample</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>jhipsterSampleApplication</name>
+  <name>jhliteExtensionSample</name>
   <description>JHLite Extension Sample</description>
   <packaging>jar</packaging>
   <dependencyManagement>
@@ -166,7 +166,7 @@
             </execution>
           </executions>
           <configuration>
-            <mainClass>tech.jhipster.lite.extension.JhipsterSampleApplicationApp</mainClass>
+            <mainClass>tech.jhipster.lite.extension.JhliteExtensionSampleApp</mainClass>
           </configuration>
         </plugin>
       </plugins>
