--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: JhipsterSampleApplication
+    name: JhliteExtensionSample
   threads:
     virtual:
       enabled: true
