--- a/renovate.json
+++ b/renovate.json
@@ -13,8 +13,6 @@
   ],
   "prHourlyLimit": 20,
   "docker-compose": {
-    "fileMatch": [
-      "^src/main/docker/[^/]*\\.ya?ml$"
-    ]
+    "fileMatch": ["^src/main/docker/[^/]*\\.ya?ml$"]
   }
 }
