--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
     <spring-boot.version>3.3.0</spring-boot.version>
     <cucumber.version>7.18.0</cucumber.version>
     <jhlite.version>1.9.0</jhlite.version>
+    <maven-checkstyle-plugin.version>3.4.0</maven-checkstyle-plugin.version>
   </properties>
 
   <build>
@@ -224,6 +225,25 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>${maven-checkstyle-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>validate</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <configLocation>checkstyle.xml</configLocation>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
+          <consoleOutput>true</consoleOutput>
+          <failsOnError>true</failsOnError>
+        </configuration>
       </plugin>
     </plugins>
     <defaultGoal>spring-boot:run</defaultGoal>
