--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
     <cucumber.version>7.18.0</cucumber.version>
     <jhlite.version>1.9.0</jhlite.version>
     <maven-checkstyle-plugin.version>3.4.0</maven-checkstyle-plugin.version>
+    <jacoco.version>0.8.11</jacoco.version>
   </properties>
 
   <build>
@@ -169,6 +170,94 @@
           <configuration>
             <mainClass>tech.jhipster.lite.extension.JhliteExtensionSampleApp</mainClass>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>${jacoco.version}</version>
+          <executions>
+            <execution>
+              <id>pre-unit-tests</id>
+              <goals>
+                <goal>prepare-agent</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>post-unit-test</id>
+              <phase>test</phase>
+              <goals>
+                <goal>report</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>pre-integration-tests</id>
+              <goals>
+                <goal>prepare-agent-integration</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>post-integration-tests</id>
+              <phase>post-integration-test</phase>
+              <goals>
+                <goal>report-integration</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>merge</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>merge</goal>
+              </goals>
+              <configuration>
+                <fileSets>
+                  <fileSet implementation="org.apache.maven.shared.model.fileset.FileSet">
+                    <directory>${project.basedir}</directory>
+                    <includes>
+                      <include>**/*.exec</include>
+                    </includes>
+                  </fileSet>
+                </fileSets>
+                <destFile>target/jacoco/allTest.exec</destFile>
+              </configuration>
+            </execution>
+            <execution>
+              <id>post-merge-report</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>report</goal>
+              </goals>
+              <configuration>
+                <dataFile>target/jacoco/allTest.exec</dataFile>
+                <outputDirectory>target/jacoco/</outputDirectory>
+              </configuration>
+            </execution>
+            <execution>
+              <id>check</id>
+              <goals>
+                <goal>check</goal>
+              </goals>
+              <configuration>
+                <dataFile>target/jacoco/allTest.exec</dataFile>
+                <rules>
+                  <rule>
+                    <element>CLASS</element>
+                    <limits>
+                      <limit>
+                        <counter>LINE</counter>
+                        <value>COVEREDRATIO</value>
+                        <minimum>1.00</minimum>
+                      </limit>
+                      <limit>
+                        <counter>BRANCH</counter>
+                        <value>COVEREDRATIO</value>
+                        <minimum>1.00</minimum>
+                      </limit>
+                    </limits>
+                  </rule>
+                </rules>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -244,6 +333,10 @@
           <consoleOutput>true</consoleOutput>
           <failsOnError>true</failsOnError>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
       </plugin>
     </plugins>
     <defaultGoal>spring-boot:run</defaultGoal>
