--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,10 +31,15 @@ jobs:
         run: npm ci
       - name: 'Prettier: check'
         run: npm run prettier:check
+      - name: 'Start local Sonar'
+        run: docker compose -f src/main/docker/sonar.yml up -d
       - name: 'Test: run tests'
         run: |
           chmod +x mvnw
           ./mvnw clean package
+      - name: 'Analysis: local Sonar'
+        run: |
+          ./tests-ci/sonar.sh
       - name: 'Test: generate sample app'
         run: |
           ./tests-ci/start.sh
