fix(ci): add execution permission to tests-ci/sonar.sh

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -39,6 +39,7 @@ jobs:
           ./mvnw clean package
       - name: 'Analysis: local Sonar'
         run: |
+          chmod +x tests-ci/sonar.sh
           ./tests-ci/sonar.sh
       - name: 'Test: generate sample app'
         run: |
