fix(ci): configure SonarCloud to run exclusively on the main branch

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -58,6 +58,7 @@ jobs:
           chmod +x tests-ci/sonar.sh
           ./tests-ci/sonar.sh
       - name: 'Analysis: SonarCloud'
+        if: github.repository == 'jhipster/jhipster-lite-extension' && github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
