--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.approvaltests</groupId>
+      <artifactId>approvaltests</artifactId>
+      <version>${approvaltests.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
@@ -100,6 +106,7 @@
     <jacoco.version>0.8.12</jacoco.version>
     <properties-maven-plugin.version>1.2.1</properties-maven-plugin.version>
     <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
+    <approvaltests.version>24.4.0</approvaltests.version>
   </properties>
 
   <build>
