--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "3.3.3",
     "prettier-plugin-gherkin": "3.1.0",
     "prettier-plugin-java": "2.6.5",
+    "prettier-plugin-organize-imports": "4.1.0",
     "prettier-plugin-packagejson": "2.5.3"
   },
   "engines": {
